--- a/styles/mainHeroes.css
+++ b/styles/mainHeroes.css
@@ -124,6 +124,11 @@ footer {
     margin: .5rem;
 }
 
+/* Class Selectors */
+.active {
+    border-bottom: 1px solid yellow;
+}
+
 /* Media Queries */
 @media only screen and (min-width: 32.5em) {
     nav ul {
